### Change Stripe and VNPay to PaymentGateway; add SEPay as the main Payment flow. Explain: Because it suit for MVP phase