@@ -1,15 +1,19 @@
 package com.example.PixelMageEcomerceProject.service;
 
-import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.ArgumentMatchers.eq;
-import static org.mockito.Mockito.*;
+import static org.mockito.Mockito.lenient;
+import static org.mockito.Mockito.mockStatic;
+import static org.mockito.Mockito.never;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.when;
 
 import java.time.Duration;
 import java.util.Collections;
+import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 
@@ -20,6 +24,7 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.MockedStatic;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.context.ApplicationEventPublisher;
 import org.springframework.data.redis.core.RedisTemplate;
 import org.springframework.data.redis.core.ValueOperations;
 
@@ -27,11 +32,11 @@ import com.example.PixelMageEcomerceProject.config.VNPayConfig;
 import com.example.PixelMageEcomerceProject.entity.Order;
 import com.example.PixelMageEcomerceProject.entity.Payment;
 import com.example.PixelMageEcomerceProject.enums.PaymentStatus;
+import com.example.PixelMageEcomerceProject.event.PaymentSuccessEvent;
 import com.example.PixelMageEcomerceProject.exceptions.RedisUnavailableException;
 import com.example.PixelMageEcomerceProject.repository.OrderRepository;
-import com.example.PixelMageEcomerceProject.repository.PackRepository;
 import com.example.PixelMageEcomerceProject.repository.PaymentRepository;
-import com.example.PixelMageEcomerceProject.service.impl.VNPayServiceImpl;
+import com.example.PixelMageEcomerceProject.service.impl.VNPayGatewayImpl;
 
 import jakarta.servlet.http.HttpServletRequest;
 
@@ -45,16 +50,16 @@ class VNPayServiceTest {
     @Mock
     private PaymentRepository paymentRepository;
     @Mock
-    private PackRepository packRepository;
-    @Mock
     private RedisTemplate<String, Object> redisTemplate;
     @Mock
     private ValueOperations<String, Object> valueOperations;
     @Mock
     private HttpServletRequest request;
+    @Mock
+    private ApplicationEventPublisher eventPublisher;
 
     @InjectMocks
-    private VNPayServiceImpl vnPayService;
+    private VNPayGatewayImpl vnPayService;
 
     @BeforeEach
     void setUp() {
@@ -64,7 +69,11 @@ class VNPayServiceTest {
     @Test
     void processIpn_success_firstTime() {
         // Mocking VNPay parameters
-        when(request.getParameterNames()).thenReturn(Collections.enumeration(Collections.singletonList("vnp_TxnRef")));
+        List<String> paramNames = List.of(
+                "vnp_TxnRef", "vnp_TransactionNo", "vnp_ResponseCode",
+                "vnp_Amount", "vnp_SecureHash");
+        when(request.getParameterNames()).thenReturn(
+                Collections.enumeration(paramNames));
         when(request.getParameter("vnp_TxnRef")).thenReturn("123-random");
         when(request.getParameter("vnp_TransactionNo")).thenReturn("TRANS123");
         when(request.getParameter("vnp_ResponseCode")).thenReturn("00");
@@ -89,18 +98,25 @@ class VNPayServiceTest {
 
             assertEquals("00", result.get("RspCode"));
             assertEquals("Confirm Success", result.get("Message"));
-            verify(orderRepository).save(order);
             verify(paymentRepository).save(any(Payment.class));
-            assertThat(order.getPaymentStatus()).isEqualTo(PaymentStatus.SUCCEEDED);
+            verify(eventPublisher).publishEvent(any(PaymentSuccessEvent.class));
+            // order status update is now handled by event listener, so we don't verify
+            // orderRepository.save here
         }
     }
 
     @Test
     void processIpn_duplicate_returnsSuccessImmediately() {
         // Mocking VNPay parameters
-        when(request.getParameterNames()).thenReturn(Collections.enumeration(Collections.singletonList("vnp_TxnRef")));
+        List<String> paramNames = List.of(
+                "vnp_TxnRef", "vnp_TransactionNo", "vnp_ResponseCode",
+                "vnp_Amount", "vnp_SecureHash");
+        when(request.getParameterNames()).thenReturn(
+                Collections.enumeration(paramNames));
         when(request.getParameter("vnp_TxnRef")).thenReturn("123-random");
         when(request.getParameter("vnp_TransactionNo")).thenReturn("TRANS123");
+        when(request.getParameter("vnp_ResponseCode")).thenReturn("00");
+        when(request.getParameter("vnp_Amount")).thenReturn("100000");
         when(request.getParameter("vnp_SecureHash")).thenReturn("VALID_HASH");
 
         // Mocking Service dependencies
@@ -120,17 +136,24 @@ class VNPayServiceTest {
 
             assertEquals("00", result.get("RspCode"));
             assertEquals("Confirm Success", result.get("Message"));
-            verify(orderRepository, never()).save(any());
+            verify(orderRepository).findById(123); // Standard lookup
             verify(paymentRepository, never()).save(any());
+            verify(eventPublisher, never()).publishEvent(any());
         }
     }
 
     @Test
     void processIpn_redisUnavailable_throwsException() {
         // Mocking VNPay parameters
-        when(request.getParameterNames()).thenReturn(Collections.enumeration(Collections.singletonList("vnp_TxnRef")));
+        List<String> paramNames = List.of(
+                "vnp_TxnRef", "vnp_TransactionNo", "vnp_ResponseCode",
+                "vnp_Amount", "vnp_SecureHash");
+        when(request.getParameterNames()).thenReturn(
+                Collections.enumeration(paramNames));
         when(request.getParameter("vnp_TxnRef")).thenReturn("123-random");
         when(request.getParameter("vnp_TransactionNo")).thenReturn("TRANS123");
+        when(request.getParameter("vnp_ResponseCode")).thenReturn("00");
+        when(request.getParameter("vnp_Amount")).thenReturn("100000");
         when(request.getParameter("vnp_SecureHash")).thenReturn("VALID_HASH");
 
         // Mocking Service dependencies
@@ -147,7 +170,7 @@ class VNPayServiceTest {
             mockedConfig.when(() -> VNPayConfig.hashAllFields(any(), eq("SECRET"))).thenReturn("VALID_HASH");
 
             assertThrows(RedisUnavailableException.class, () -> vnPayService.processIpn(request));
-            verify(orderRepository, never()).save(any());
+            verify(eventPublisher, never()).publishEvent(any());
         }
     }
 }
